--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
     <ul class="nav-links" id="navLinks">
       <!-- <li><a href="#">Home</a></li> -->
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Gallery</a></li>
-      <li><a href="#">Spa</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="./otherpages.html/about.html">About</a></li>
+      <li><a href="./otherpages.html/services.html">Services</a></li>
+      <li><a href="./otherpages.html/gallery.html">Gallery</a></li>
+      <li><a href="./otherpages.html/spa.html">Spa</a></li>
+      <li><a href="./otherpages.html/contact.html">Contact</a></li>
       <li><a href="#" class="btn-member">Become a Member</a></li>
     </ul>
     <div class="hamburger" id="hamburger">
@@ -389,7 +389,7 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href=".//otherpages.html/about.html">About Us</a></li>
                     <li><a href="./classes.html">Classes</a></li>
                     <li><a href="./schedule.html">Schedule</a></li>
                     <li><a href="./contact.html">Contact</a></li>
