--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header>
+   <header>
   <nav class="navbar">
     <div class="logo">
-      <img src="./images/remove logo.png" alt="FlexZone Fitness Logo"> <span>FlexZone Fitness</span>
-        <!-- <p></p> -->
+      <img src="./images/remove logo.png" alt="FlexZone Fitness Logo">
+      <span>FlexZone Fitness</span>
     </div>
 
     <ul class="nav-links" id="navLinks">
-      <!-- <li><a href="#">Home</a></li> -->
       <li><a href="./otherpages.html/about.html">About</a></li>
       <li><a href="./otherpages.html/services.html">Services</a></li>
       <li><a href="./otherpages.html/gallery.html">Gallery</a></li>
@@ -28,14 +27,14 @@
       <li><a href="./otherpages.html/contact.html">Contact</a></li>
       <li><a href="#" class="btn-member">Become a Member</a></li>
     </ul>
+
     <div class="hamburger" id="hamburger">
       <span></span>
       <span></span>
       <span></span>
-      <span></span>
     </div>
-      <div class="menu-overlay" id="menuOverlay"></div>
 
+    <div class="menu-overlay" id="menuOverlay"></div>
   </nav>
 </header>
 
