--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="./otherpages.html/gallery.html">Gallery</a></li>
       <li><a href="./otherpages.html/spa.html">Spa</a></li>
       <li><a href="./otherpages.html/contact.html">Contact</a></li>
-      <li><a href="#" class="btn-member">Become a Member</a></li>
+      <li><a href="./otherpages.html/member-signup.html" class="btn-member">Become a Member</a></li>
     </ul>
 
     <div class="hamburger" id="hamburger">
@@ -388,10 +388,10 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href=".//otherpages.html/about.html">About Us</a></li>
-                    <li><a href="./classes.html">Classes</a></li>
-                    <li><a href="./schedule.html">Schedule</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./otherpages.html/about.html">About Us</a></li>
+                    <li><a href="./otherpages.html/services.html">Our Services</a></li>
+                    <li><a href="./otherpages.html/gallery.html">Our Gallery</a></li>
+                    <li><a href="./otherpages.html/contact.html">Contact</a></li>
                     <li><a href="./membership.html">Membership</a></li>
                     <li><a href="./blog.html">Blog</a></li>
                 </ul>
