--- a/otherpages.html/about.html
+++ b/otherpages.html/about.html
@@ -370,8 +370,9 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="../otherpages.html/about.html">About Us</a></li>
             <li><a href="../otherpages.html/services.html">Services</a></li>
-            <li><a href="../otherpages.html/">Schedule</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="../otherpages.html/gallery.html">Gallery</a></li>
+            <li><a href="./spa.html">Spa</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
 
