--- a/otherpages.html/services.html
+++ b/otherpages.html/services.html
@@ -30,10 +30,10 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./services.html">Services</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Spa</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#" class="btn-member">Become a Member</a></li>
+          <li><a href="./gallery.html">Gallery</a></li>
+          <li><a href="./spa.html">Spa</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./member-login.html" class="btn-member">Become a Member</a></li>
         </ul>
         <div class="hamburger" id="hamburger">
           <span></span> <span></span> <span></span> <span></span>
@@ -512,8 +512,9 @@
               <li><a href="../index.html">Home</a></li>
               <li><a href="./about.html">About Us</a></li>
               <li><a href="./services.html">Services</a></li>
-              <li><a href="#">Classes</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./gallery.html">Gallery</a></li>
+              <li><a href="./spa.html">Spa</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-col">
