--- a/otherpages.html/spa.html
+++ b/otherpages.html/spa.html
@@ -22,10 +22,9 @@
         <li><a href="./about.html">About</a></li>
         <li><a href="./services.html">Services</a></li>
         <li><a href="./spa.html">Spa</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#" class="btn-member">Become a Member</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./member-signup.html" class="btn-member">Become a Member</a></li>
       </ul>
-
       <button class="hamburger" id="hamburger" aria-label="Toggle navigation" aria-controls="navLinks" aria-expanded="false">
         <span></span>
         <span></span>
@@ -143,8 +142,12 @@
           <h4>Quick Links</h4>
           <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="./services.html">Services</a></li>
             <li><a href="./about.html">About</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
+            <li><a href="./spa.html">Spa</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            
           </ul>
         </div>
         <div class="footer-col">
